# dmarc-lens

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements-cdk.txt  requirements-dev.txt  requirements.txt  test_email_complex.eml
.github/workflows/: ci.yml  deploy.yml
.kiro/specs/dmarc-analysis/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: aws-setup.md  deployment.md
infrastructure/: app.py  cdk.json  dmarc_lens_stack.py  package-lock.json  package.json
scripts/: deploy-complete.sh  deploy-web.sh  deploy.sh  setup-dev.sh  test-deployment.py  verify-deployment.py
src/dmarc_lens/: __init__.py  main.py
src/dmarc_lens/analyzers/: __init__.py
src/dmarc_lens/lambda_functions/: __init__.py  analysis_engine.py  auth.py  data_api.py  report_parser.py
src/dmarc_lens/models/: __init__.py  dmarc_models.py
src/dmarc_lens/parsers/: __init__.py
src/dmarc_lens/utils/: __init__.py  email_utils.py  logging_utils.py  xml_utils.py
tests/: __init__.py
tests/fixtures/: complex_dmarc_report.xml
tests/unit/: test_analysis_properties.py  test_authentication_properties.py  test_data_model_properties.py  test_email_processing_properties.py
web/: .env.example  README.md  package-lock.json  package.json
web/src/: App.css  App.test.tsx  App.tsx  aws-exports.ts
web/src/components/: Dashboard.tsx  Layout.tsx  ReportDetail.tsx  Reports.tsx  TimePeriodFilter.tsx
web/src/components/charts/: AuthenticationTrendChart.tsx  DomainComparisonChart.tsx  FailureSourcesChart.tsx
web/src/hooks/: useAuth.ts  useDashboard.ts  useDomainAnalysis.ts  useReports.ts
web/src/services/: api.ts
web/src/types/: index.ts
