[project]
name = "dmarc-lens"
version = "0.1.0"
description = "A serverless platform for analyzing DMARC email security reports"
authors = [
    {name = "DMARC Lens Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Security",
]
dependencies = [
    "boto3>=1.26.0",
    "python-dateutil>=2.8.0",
    "PyJWT>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.70.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "boto3-stubs[essential]>=1.26.0",
    "moto[all]>=4.0.0",
]
cdk = [
    "aws-cdk-lib>=2.80.0",
    "constructs>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/msusta/dmarc-lens"
Repository = "https://github.com/msusta/dmarc-lens"
Issues = "https://github.com/msusta/dmarc-lens/issues"

[project.scripts]
dmarc-lens = "dmarc_lens.main:main"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dmarc_lens"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["dmarc_lens.lambda_functions.data_api", "dmarc_lens.lambda_functions.analysis_engine", "dmarc_lens.lambda_functions.auth"]
disable_error_code = ["arg-type", "union-attr", "index", "no-any-return", "var-annotated", "assignment", "attr-defined"]

[[tool.mypy.overrides]]
module = ["dmarc_lens.utils.email_utils"]
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = ["dmarc_lens.utils.xml_utils", "dmarc_lens.utils.logging_utils"]
disable_error_code = ["union-attr", "no-untyped-def"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/dmarc_lens",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=55"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "property: Property-based tests",
    "slow: Slow running tests",
]